--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -5,12 +5,10 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "all": "babel-node run_all",
     "build": "webpack",
     "clean-build": "pnpm clean-fbts && pnpm install && pnpm build",
     "clean-fbts": "rm .enum_manifest.json .src_manifest.json .source_strings.json src/translatedFbts.json .test_*.json 2&> /dev/null || exit 0",
     "collect-fbts": "fbt-collect --fbt-common-path ./common_strings.json --pretty --manifest < .src_manifest.json > .source_strings.json",
-    "preinstall": "cd ../packages/babel-plugin-fbt && pnpm prepack",
     "manifest": "fbt-manifest --src src",
     "start": "webpack-dev-server --open",
     "test": "pnpm test-build-scripts && cd .. && jest demo-app",
@@ -21,49 +19,28 @@
     "translate-fbts-single-file": "fbt-translate --jenkins --stdin < translation_input.json > src/translatedFbts.json"
   },
   "dependencies": {
-    "@babel/plugin-syntax-nullish-coalescing-operator": "^7.2.0",
-    "@babel/plugin-syntax-numeric-separator": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@fbtjs/default-collection-transform": "x.x.x",
-    "babel-plugin-fbt": "x.x.x",
-    "babel-plugin-fbt-runtime": "x.x.x",
+    "@fbtjs/default-collection-transform": "workspace:*",
+    "babel-plugin-fbt": "workspace:*",
+    "babel-plugin-fbt-runtime": "workspace:*",
     "babel-plugin-minify-replace": "^0.5.0",
-    "fbt": "x.x.x",
+    "fbt": "workspace:*",
     "invariant": "^2.2.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
-    "@babel/node": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0",
-    "@babel/plugin-syntax-class-properties": "^7.2.0",
-    "@babel/plugin-syntax-flow": "^7.2.0",
-    "@babel/plugin-syntax-jsx": "^7.2.0",
-    "@babel/plugin-syntax-nullish-coalescing-operator": "^7.2.0",
-    "@babel/plugin-syntax-numeric-separator": "^7.2.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-    "@babel/plugin-syntax-optional-catch-binding": "^7.2.0",
-    "@babel/plugin-syntax-optional-chaining": "^7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.2.0",
-    "@babel/preset-env": "7.1.6",
-    "@babel/preset-flow": "7.0.0",
-    "@babel/preset-react": "7.0.0",
-    "@cnakazawa/watch": "^1.0.4",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "8.0.4",
-    "classnames": "2.2.6",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^9.2.1",
+    "classnames": "^2.2.6",
     "css-loader": "1.0.1",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "invariant": "^2.2.4",
-    "jest-docblock": "^22.2.0",
     "normalize.css": "8.0.1",
     "raf": "3.4.1",
-    "react-test-renderer": "16.6.3",
-    "remove-flow-types-loader": "1.1.0",
+    "react-test-renderer": "^18.0.0",
     "style-loader": "0.23.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^3.3.12",
