--- a/demo-app/.babelrc
+++ b/demo-app/.babelrc
@@ -1,16 +1,3 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    [
-      "@babel/preset-react",
-      {
-        "throwIfNamespace": false
-      }
-    ],
-    "@babel/preset-flow"
-  ],
-  "plugins": [
-    "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-proposal-class-properties"
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-flow"]
 }
