--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "babel-plugin-fbt-runtime:test": "jest packages/babel-plugin-fbt-runtime",
     "babel-plugin-fbt:test": "jest packages/babel-plugin-fbt",
-    "babel-plugin-standalone:test": "yarn workspace @fbtjs/babel-plugin-standalone build && yarn workspace @fbtjs/babel-plugin-standalone test",
     "build": "gulp --series clean build-runtime",
     "build-runtime": "gulp build-runtime",
     "clean": "gulp clean",
     "clean-build": "pnpm install && cd ./demo-app && clean-build",
     "clean-test": "pnpm clean-build && pnpm test",
     "demo-app:test": "cd ./demo-app && pnpm test",
+    "dev": "cd demo-app && pnpm start",
     "fbt:test": "jest packages/fbt",
     "fbt:watch": "gulp watch-runtime",
     "flow:check": "flow check --show-all-errors",
@@ -22,55 +22,18 @@
     "test:watch": "jest --watch",
     "top-level:test": "pnpm jest __tests__/*"
   },
+  "browserslist": "> 1%, not dead",
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.2.0",
     "babel-plugin-minify-replace": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
+    "@babel/core": "^7.26.0",
     "@babel/generator": "^7.2.0",
-    "@babel/node": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0",
-    "@babel/plugin-syntax-bigint": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-flow": "^7.2.0",
-    "@babel/plugin-syntax-jsx": "^7.2.0",
-    "@babel/plugin-syntax-nullish-coalescing-operator": "^7.2.0",
-    "@babel/plugin-syntax-numeric-separator": "^7.2.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-    "@babel/plugin-syntax-optional-catch-binding": "^7.2.0",
-    "@babel/plugin-syntax-optional-chaining": "^7.2.0",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0",
-    "@babel/plugin-transform-block-scoped-functions": "^7.12.0",
-    "@babel/plugin-transform-block-scoping": "^7.12.0",
-    "@babel/plugin-transform-classes": "^7.12.0",
-    "@babel/plugin-transform-computed-properties": "^7.12.0",
-    "@babel/plugin-transform-destructuring": "^7.12.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.2.0",
-    "@babel/plugin-transform-for-of": "^7.12.0",
-    "@babel/plugin-transform-function-name": "^7.12.0",
-    "@babel/plugin-transform-literals": "^7.12.0",
-    "@babel/plugin-transform-member-expression-literals": "^7.12.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.0",
-    "@babel/plugin-transform-object-super": "^7.12.0",
-    "@babel/plugin-transform-parameters": "^7.12.0",
-    "@babel/plugin-transform-property-literals": "^7.12.0",
-    "@babel/plugin-transform-react-display-name": "^7.12.0",
-    "@babel/plugin-transform-shorthand-properties": "^7.12.0",
-    "@babel/plugin-transform-spread": "^7.12.0",
-    "@babel/plugin-transform-template-literals": "^7.12.0",
+    "@babel/preset-env": "^7.26.0",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@cnakazawa/watch": "^1.0.3",
+    "@babel/preset-react": "^7.25.9",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-plugin-syntax-trailing-function-commas": "^7.0.0-beta.0",
-    "babel-plugin-transform-flow-enums": "^0.0.2",
-    "babel-preset-fbjs": "^3.1.2",
     "del": "^3.0.0",
     "flow-bin": "0.225.0",
     "gulp": "^4.0.0",
@@ -86,14 +49,12 @@
     "gulp-util": "^3.0.8",
     "invariant": "^2.2.4",
     "jest": "^30.0.0-alpha.6",
-    "jest-cli": "^30.0.0-alpha.6",
     "jest-docblock": "^30.0.0-alpha.6",
     "nullthrows": "^1.1.1",
     "prettier": "^2.0.0",
     "prettier-plugin-packagejson": "^2.5.6",
     "react-dom": "^18.0.0",
-    "semver": "^7.3.5",
     "webpack": "^5.76.0",
-    "webpack-stream": "^6.0.0"
+    "webpack-stream": "^7.0.0"
   }
 }
