--- a/packages/default-collection-transform/package.json
+++ b/packages/default-collection-transform/package.json
@@ -17,17 +17,9 @@
   "main": "index.js",
   "scripts": {},
   "dependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.26.0",
     "@babel/generator": "^7.0.0",
-    "@babel/parser": "^7.7.4",
-    "@babel/plugin-syntax-class-properties": "^7.0.0",
-    "@babel/plugin-syntax-flow": "^7.7.4",
-    "@babel/plugin-syntax-jsx": "^7.0.0",
-    "@babel/plugin-syntax-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-syntax-numeric-separator": "^7.2.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-optional-catch-binding": "^7.0.0",
-    "@babel/plugin-syntax-optional-chaining": "^7.0.0"
+    "@babel/parser": "^7.7.4"
   },
   "peerDependencies": {
     "babel-plugin-fbt": "^1.0.0"
