--- a/packages/fbt/package.json
+++ b/packages/fbt/package.json
@@ -12,18 +12,12 @@
     "localization",
     "react"
   ],
-  "homepage": "https://facebook.github.io/fbt/",
-  "bugs": "https://github.com/facebook/fbt/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/fbt",
-    "directory": "packages/fbt"
+    "url": "https://github.com/facebook/fbt"
   },
   "license": "MIT",
   "main": "lib/FbtPublic.js",
-  "scripts": {
-    "publish_to_npm_latest": "yarn publish . && git push --tags && git push"
-  },
   "dependencies": {
     "invariant": "^2.2.4"
   },
@@ -32,11 +26,5 @@
     "babel-plugin-fbt": "^1.0.0",
     "babel-plugin-fbt-runtime": "^1.0.0",
     "react": "^18.0.0 || ^19.0.0"
-  },
-  "//": "Copyright (c) Meta Platforms, Inc. and affiliates.",
-  "//version": "Follow SemVer specs at https://semver.org/",
-  "devEngines": {
-    "node": "6.x || 7.x || 8.x || 9.x || 10.x || 11.x || 12.x",
-    "npm": "6.x"
   }
 }
