--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.25.9",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@testing-library/react": "^16.0.1",
     "del": "^3.0.0",
     "flow-bin": "0.225.0",
     "gulp": "^4.0.0",
@@ -50,6 +51,7 @@
     "gulp-util": "^3.0.8",
     "invariant": "^2.2.4",
     "jest": "^30.0.0-alpha.6",
+    "jest-environment-jsdom": "^29.7.0",
     "nullthrows": "^1.1.1",
     "prettier": "^2.0.0",
     "prettier-plugin-packagejson": "^2.5.6",
