--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-app",
+  "name": "example",
   "version": "1.0.0",
   "private": true,
   "license": "MIT",
@@ -10,7 +10,7 @@
     "collect-fbts": "fbt-collect --fbt-common-path ./common_strings.json --pretty --manifest < .src_manifest.json > .source_strings.json",
     "dev": "vite",
     "manifest": "fbt-manifest --src src",
-    "test": "pnpm test-build-scripts && cd .. && jest demo-app",
+    "test": "pnpm test-build-scripts && cd .. && jest example",
     "test-build-scripts": "pnpm test-collect-fbts && pnpm test-collect-fbts-with-tiger-hash && pnpm test-translate-fbts-into-output-dir && pnpm translate-fbts-single-file",
     "test-collect-fbts": "fbt-collect --fbt-common-path ./common_strings.json --pretty --manifest < .src_manifest.json > .test_source_strings.json",
     "test-translate-fbts-into-output-dir": "fbt-translate --translations translations/*.json --jenkins --output-dir src/translatedFbts",
@@ -30,9 +30,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.26.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "classnames": "^2.2.6",
+    "classnames": "^2.5.1",
     "invariant": "^2.2.4",
     "normalize.css": "8.0.1",
     "raf": "3.4.1",
