--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "fbt-top-level-repo",
+  "name": "fbt-private",
   "version": "0.0.1",
   "private": true,
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "babel-plugin-fbt-runtime:test": "jest packages/babel-plugin-fbt-runtime",
-    "babel-plugin-fbt:test": "jest packages/babel-plugin-fbt",
-    "build": "gulp --series clean build-runtime",
-    "build-runtime": "gulp build-runtime",
-    "clean": "gulp clean",
+    "build": "pnpm -r build",
+    "build:all": "pnpm -r build; pnpm -r build:types",
+    "clean": "rm -rf packages/*/lib",
     "dev": "cd example && pnpm dev",
-    "fbt:test": "jest packages/fbt",
-    "fbt:watch": "gulp watch-runtime",
-    "test": "cd ./example test-build-scripts && cd .. && jest && pnpm tsc",
-    "test:watch": "jest --watch",
-    "top-level:test": "pnpm jest __tests__/*"
-  },
-  "browserslist": "> 1%, not dead",
-  "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "babel-plugin-minify-replace": "^0.5.0"
+    "jest": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" node_modules/.bin/jest",
+    "test": "jest && tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -43,18 +33,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-test-renderer": "^18.3.0",
     "@types/yargs": "^17.0.33",
-    "del": "^3.0.0",
-    "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-derequire": "^2.1.0",
-    "gulp-each": "^0.5.0",
-    "gulp-flatten": "^0.4.0",
-    "gulp-header": "^2.0.9",
-    "gulp-if": "^2.0.2",
-    "gulp-once": "^2.1.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-util": "^3.0.8",
+    "dts-bundle-generator": "^9.5.1",
+    "esbuild": "^0.24.0",
     "invariant": "^2.2.4",
     "jest": "^30.0.0-alpha.6",
     "jest-environment-jsdom": "^29.7.0",
@@ -62,7 +42,6 @@
     "prettier": "^2.0.0",
     "prettier-plugin-packagejson": "^2.5.6",
     "react-dom": "^18.0.0",
-    "typescript": "^5.7.2",
-    "webpack-stream": "^7.0.0"
+    "typescript": "^5.7.2"
   }
 }
