--- a/packages/babel-plugin-fbt-runtime/package.json
+++ b/packages/babel-plugin-fbt-runtime/package.json
@@ -7,12 +7,18 @@
     "url": "https://github.com/facebook/fbt.git"
   },
   "license": "MIT",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "scripts": {
+    "build": "rm -f lib/index.js; esbuild --target=node22 --platform=node --format=esm --outfile=lib/index.js --external:@babel/* --bundle ./src/index.tsx",
+    "build:types": "dts-bundle-generator -o lib/index.d.ts src/index.tsx"
+  },
   "dependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/traverse": "^7.26.3",
+    "@babel/types": "^7.26.3",
     "invariant": "^2.2.4"
   },
   "peerDependencies": {
-    "babel-plugin-fbt": "^1.0.0"
+    "babel-plugin-fbt": "workspace:*"
   }
 }
