--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "build:all": "pnpm -r build; pnpm -r build:types",
     "clean": "rm -rf packages/*/lib",
     "dev": "cd example && pnpm dev",
+    "lint:format": "prettier --cache --check .",
+    "format": "prettier --write .",
     "jest": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" node_modules/.bin/jest",
     "lint": "eslint --cache .",
-    "test": "lint && jest && tsc"
+    "test": "npm-run-all --parallel lint jest tsc:check lint:format",
+    "tsc:check": "tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -44,6 +47,7 @@
     "jest": "^30.0.0-alpha.6",
     "jest-environment-jsdom": "^29.7.0",
     "json-diff": "^1.0.6",
+    "npm-run-all2": "^7.0.1",
     "nullthrows": "^1.1.1",
     "prettier": "^2.0.0",
     "prettier-plugin-packagejson": "^2.5.6",
