--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "@types/json-diff": "^1.0.3",
     "@types/node": "^22.10.1",
     "@types/prettier": "^2.0.0",
-    "@types/react": "^18.3.13",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/yargs": "^17.0.33",
     "dts-bundle-generator": "^9.5.1",
     "esbuild": "^0.24.0",
@@ -51,7 +50,7 @@
     "nullthrows": "^1.1.1",
     "prettier": "^2.8.8",
     "prettier-plugin-packagejson": "^2.5.6",
-    "react-dom": "^18.0.0",
+    "react-dom": "^19.0.0",
     "typescript": "^5.7.2"
   },
   "pnpm": {
@@ -59,6 +58,9 @@
       "ignoreDependencies": [
         "eslint"
       ]
+    },
+    "overrides": {
+      "react-is@^*": "19.0.0"
     }
   }
 }
