--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,4 +2,5 @@ packages:
   - 'example'
   - 'packages/babel-plugin-fbt-runtime'
   - 'packages/babel-plugin-fbt'
+  - 'packages/babel-preset-fbt'
   - 'packages/fbt'
