--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "pnpm -r build",
-    "build:all": "pnpm -r build && pnpm -r build:types && pnpm install && cd example && pnpm build:fbtee",
+    "build:all": "pnpm -r build && pnpm -r build:types && pnpm install && pnpm copy-files && cd example && pnpm build:fbtee",
+    "copy-files": "find packages/* -type d -maxdepth 0 -exec cp README.md LICENSE {} \\;",
     "clean": "rm -rf packages/*/lib; cd example pnpm clean",
     "dev": "cd example && pnpm build:fbtee && pnpm dev",
     "lint:format": "prettier --cache --check .",
