--- a/packages/fbtee/package.json
+++ b/packages/fbtee/package.json
@@ -20,7 +20,7 @@
   "type": "module",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rm -f lib/index.js; esbuild --target=node22 --platform=node --format=esm --outfile=lib/index.js --jsx=automatic --bundle ./src/index.tsx; cp ./src/ReactTypes.d.ts ./lib/ReactTypes.d.ts",
+    "build": "rm -f lib/index.js; esbuild --target=node22 --platform=node --format=esm --outfile=lib/index.js --jsx=automatic --bundle ./src/index.tsx;",
     "build:types": "dts-bundle-generator -o lib/index.d.ts src/index.tsx"
   },
   "dependencies": {
