--- a/packages/babel-plugin-fbtee-auto-import/package.json
+++ b/packages/babel-plugin-fbtee-auto-import/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nkzw/babel-plugin-fbtee-auto-import",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "The JavaScript & React Internationalization Framework.",
   "keywords": [
     "fbt",
@@ -26,6 +26,6 @@
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@babel/types": "^7.26.3",
-    "@nkzw/babel-plugin-fbtee": "workspace:*"
+    "@nkzw/babel-plugin-fbtee": "workspace:^"
   }
 }
