--- a/packages/babel-plugin-fbtee-runtime/package.json
+++ b/packages/babel-plugin-fbtee-runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nkzw/babel-plugin-fbtee-runtime",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "The JavaScript & React Internationalization Framework.",
   "keywords": [
     "fbt",
@@ -31,9 +31,9 @@
     "invariant": "^2.2.4"
   },
   "devDependencies": {
-    "@nkzw/babel-plugin-fbtee-auto-import": "workspace:*"
+    "@nkzw/babel-plugin-fbtee-auto-import": "workspace:^"
   },
   "peerDependencies": {
-    "@nkzw/babel-plugin-fbtee": "workspace:*"
+    "@nkzw/babel-plugin-fbtee": "workspace:^"
   }
 }
