--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@types/react-dom": "^19.0.0",
     "@types/yargs": "^17.0.33",
     "dts-bundle-generator": "^9.5.1",
-    "esbuild": "^0.24.0",
     "eslint": "^8.0.0",
     "eslint-plugin-workspaces": "^0.10.1",
     "invariant": "^2.2.4",
@@ -54,6 +53,7 @@
     "prettier-2": "npm:prettier@^2.8.8",
     "prettier-plugin-packagejson": "^2.5.6",
     "react-dom": "^19.0.0",
+    "tsup": "^8.3.5",
     "typescript": "^5.7.2"
   },
   "pnpm": {
