--- a/packages/babel-plugin-fbtee/package.json
+++ b/packages/babel-plugin-fbtee/package.json
@@ -23,9 +23,7 @@
     "fbtee": "lib/bin.js"
   },
   "scripts": {
-    "build": "rm -f lib/index.js; pnpm build:src; pnpm build:bin",
-    "build:bin": "esbuild --target=node22 --platform=node --format=esm --outfile=lib/bin.js --jsx=automatic --external:glob --external:jest-docblock --external:yargs --external:@babel/* --bundle ./src/bin.tsx",
-    "build:src": "esbuild --target=node22 --platform=node --format=esm --outfile=lib/index.js --jsx=automatic --external:glob --external:jest-docblock --external:yargs --external:@babel/* --bundle ./src/index.tsx",
+    "build": "tsup src/index.tsx src/bin.tsx -d lib --target=node22 --format=esm --clean --no-splitting",
     "build:types": "dts-bundle-generator -o lib/index.d.ts src/index.tsx"
   },
   "dependencies": {
