Add to the `@nkzw` namespace so we don't pollute the global npm namespace further.

--- a/example/package.json
+++ b/example/package.json
@@ -26,8 +26,8 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
+    "@nkzw/eslint-plugin-fbtee": "workspace:^",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint-plugin-fbtee": "workspace:^",
     "invariant": "^2.2.4",
     "vite": "^6.0.3"
   }
