--- a/packages/eslint-plugin-fbtee/package.json
+++ b/packages/eslint-plugin-fbtee/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-fbtee",
+  "name": "@nkzw/eslint-plugin-fbtee",
   "version": "0.0.1",
   "description": "",
   "keywords": [],
