--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ node_modules
 packages/*/lib
 packages/*/LICENSE
 packages/*/README.md
-packages/fbt/lib
-packages/fbt/LICENSE
+packages/fbtee/.enum_manifest.json
+packages/fbtee/.src_manifest.json
+packages/fbtee/lib-tmp
+packages/fbtee/Strings.json
 tsconfig.tsbuildinfo
