--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@babel/preset-typescript": "^7.26.0",
     "@babel/types": "^7.26.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@jest/globals": "^30.0.0-alpha.6",
-    "@nkzw/eslint-config": "^1.18.1",
+    "@jest/globals": "30.0.0-alpha.6",
+    "@nkzw/eslint-config": "^1.19.0",
     "@testing-library/react": "^16.1.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.6.8",
@@ -46,11 +46,11 @@
     "eslint": "^8.0.0",
     "eslint-plugin-workspaces": "^0.10.1",
     "invariant": "^2.2.4",
-    "jest": "^30.0.0-alpha.6",
-    "jest-environment-jsdom": "^30.0.0-alpha.6",
+    "jest": "30.0.0-alpha.6",
+    "jest-environment-jsdom": "30.0.0-alpha.6",
     "npm-run-all2": "^7.0.2",
     "nullthrows": "^1.1.1",
-    "prettier": "^4.0.0-alpha.10",
+    "prettier": "4.0.0-alpha.10",
     "prettier-2": "npm:prettier@^2.8.8",
     "prettier-plugin-packagejson": "^2.5.6",
     "react-dom": "^19.0.0",
