--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "pnpm -r build",
     "build:all": "pnpm -r build && pnpm install && pnpm --filter=fbtee build:fbtee-strings && pnpm copy-files && cd example && pnpm build:fbtee",
     "clean": "rm -rf packages/*/lib packages/fbtee/lib-tmp; cd example pnpm clean",
-    "copy-files": "find packages/* -type d -maxdepth 0 -exec cp README.md LICENSE Strings.json {} \\;",
+    "copy-files": "find packages/* -type d -maxdepth 0 -exec cp README.md LICENSE {} \\;",
     "dev": "cd example && pnpm build:fbtee && pnpm dev",
     "format": "prettier --write .",
     "jest": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules --no-warnings\" node_modules/.bin/jest",
