--- a/example/react-router-cloudflare-example/package.json
+++ b/example/react-router-cloudflare-example/package.json
@@ -34,6 +34,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "@babel/preset-typescript": "^7.26.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
     "typescript": "^5.7.2",
     "vite": "^6.0.7",
     "vite-plugin-babel": "^1.3.0",
