--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "prettier-2": "npm:prettier@^2.8.8",
     "prettier-plugin-packagejson": "^2.5.10",
     "react-dom": "^19.1.0",
-    "tsup": "^8.4.0",
+    "tsdown": "^0.10.0",
     "typescript": "^5.8.3"
   },
   "pnpm": {
