--- a/packages/babel-plugin-fbtee-runtime/package.json
+++ b/packages/babel-plugin-fbtee-runtime/package.json
@@ -21,7 +21,7 @@
   "type": "module",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsup src/index.tsx -d lib --target=node22 --format=esm --clean --no-splitting --dts"
+    "build": "tsdown src/index.tsx -d lib --target=node22 --format=esm --clean --dts"
   },
   "dependencies": {
     "@babel/core": "^7.26.10",
