--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/preset-typescript": "^7.27.0",
     "@babel/types": "^7.27.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@jest/globals": "30.0.0-alpha.6",
+    "@jest/globals": "30.0.0-beta.3",
     "@nkzw/eslint-config": "^2.3.1",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
@@ -46,8 +46,8 @@
     "eslint": "^9.25.1",
     "eslint-plugin-workspaces": "^0.10.1",
     "invariant": "^2.2.4",
-    "jest": "30.0.0-alpha.6",
-    "jest-environment-jsdom": "30.0.0-alpha.6",
+    "jest": "30.0.0-beta.3",
+    "jest-environment-jsdom": "30.0.0-beta.3",
     "npm-run-all2": "^7.0.2",
     "nullthrows": "^1.1.1",
     "prettier": "4.0.0-alpha.12",
