--- a/packages/babel-plugin-fbtee/package.json
+++ b/packages/babel-plugin-fbtee/package.json
@@ -27,21 +27,21 @@
     "build": "tsdown src/index.tsx src/bin.tsx -d lib --target=node22 --format=esm --clean --dts"
   },
   "dependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/generator": "^7.27.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.27.0",
-    "@babel/traverse": "^7.27.0",
-    "@babel/types": "^7.27.0",
+    "@babel/core": "^7.27.1",
+    "@babel/generator": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@babel/traverse": "^7.27.1",
+    "@babel/types": "^7.27.1",
     "@nkzw/babel-plugin-fbtee-auto-import": "workspace:^",
     "glob": "^11.0.2",
     "invariant": "^2.2.4",
-    "jest-docblock": "30.0.0-alpha.6",
+    "jest-docblock": "30.0.0-beta.3",
     "nullthrows": "^1.1.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.25.9",
+    "@babel/plugin-syntax-jsx": "^7.27.1",
     "@types/babel__core": "^7.20.5",
     "@types/babel__traverse": "^7.20.7",
     "@types/glob": "^8.1.0"
