--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.27.2",
-    "@babel/core": "^7.27.1",
-    "@babel/generator": "^7.27.1",
-    "@babel/parser": "^7.27.2",
+    "@babel/core": "^7.27.4",
+    "@babel/generator": "^7.27.5",
+    "@babel/parser": "^7.27.5",
     "@babel/plugin-syntax-import-attributes": "^7.27.1",
     "@babel/plugin-syntax-typescript": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@babel/types": "^7.27.1",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@jest/globals": "30.0.0-beta.3",
+    "@babel/types": "^7.27.3",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@jest/globals": "30.0.0-beta.6",
     "@nkzw/eslint-config": "^3.0.1",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
@@ -38,26 +38,29 @@
     "@types/invariant": "^2.2.37",
     "@types/jest": "^29.5.14",
     "@types/json-diff": "^1.0.3",
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.15.29",
     "@types/prettier-2": "npm:@types/prettier@^2.0.0",
-    "@types/react": "^19.1.5",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@types/yargs": "^17.0.33",
-    "eslint": "^9.27.0",
+    "eslint": "^9.28.0",
     "eslint-plugin-workspaces": "^0.11.0",
     "invariant": "^2.2.4",
-    "jest": "30.0.0-beta.3",
-    "jest-environment-jsdom": "30.0.0-beta.3",
+    "jest": "30.0.0-beta.6",
+    "jest-environment-jsdom": "30.0.0-beta.6",
     "npm-run-all2": "^8.0.4",
     "nullthrows": "^1.1.1",
     "prettier": "4.0.0-alpha.12",
     "prettier-2": "npm:prettier@^2.8.8",
-    "prettier-plugin-packagejson": "^2.5.14",
+    "prettier-plugin-packagejson": "^2.5.15",
     "react-dom": "^19.1.0",
-    "tsdown": "^0.12.3",
+    "tsdown": "^0.12.6",
     "typescript": "^5.8.3"
   },
   "pnpm": {
+    "onlyBuiltDependencies": [
+      "unrs-resolver"
+    ],
     "updateConfig": {
       "ignoreDependencies": [
         "@types/prettier-2",
